MWTA v1.2.0
- Made FileSystem.java universal for everything
- Added FileDialog for Saving/Opening Files
- Reworked Customizable Sign Background Texture JSON Logic
- Border on Customizable Signs now rendering on top of textures from far away
- Reworked Preferences Window to be more intuitive
- Added new Data Syntax (End-of-Life for old: August 2025)
- Removed Element Name being ID by default
- Improved ID Logic
- Signs importable/exportable (from local machine)
- Elements importable/exportable (from local machine)
- Renamed things for better understanding
- Rewrote some font logic
- Changed LICENSE
- Updated README.md